--- a/.github/workflows/versions.yaml
+++ b/.github/workflows/versions.yaml
@@ -3,8 +3,10 @@ name: Sync component versions
 on:
   schedule:
     - cron: '15 * * * *'
+  push:
+    branch: main
 jobs:
-  labeler:
+  versions:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
