--- a/.github/workflows/versions.yaml
+++ b/.github/workflows/versions.yaml
@@ -14,6 +14,5 @@ jobs:
     - uses: romoh/dependencies-autoupdate@v1.1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        update-command: 'make --always-make jsonnet/kube-prometheus/versions.json'
-        update-path: '.'
-        on-changes-command: 'make --always-make generate'
+        update-command: "'make --always-make jsonnet/kube-prometheus/versions.json'"
+        on-changes-command: "'make --always-make generate'"
